Fix alignment of the sections and size of the buttons

--- a/src/assets/scss/button.scss
+++ b/src/assets/scss/button.scss
@@ -6,10 +6,10 @@
   border-radius: 4px;
   cursor: pointer;
   display: flex;
-  font-size: 12px;
+  font-size: 16px;
   justify-content: center;
   outline: none;
-  padding: 4px 20px;
+  padding: 8px 12px;
   text-align: center;
   text-decoration: none;
 }
@@ -42,18 +42,12 @@
 // Sizes
 
 .m-button--small {
-  padding-bottom: 4px;
-  padding-left: 24px;
-  padding-right: 24px;
-  padding-top: 4px;
-}
-
-.m-button--large {
-  font-size: 16px;
-  padding-bottom: 8px;
-  padding-left: 12px;
-  padding-right: 12px;
-  padding-top: 8px;
+  font-size: 12px;
+  padding-bottom: 6px;
+  padding-left: 26px;
+  padding-right: 26px;
+  padding-top: 6px;
+  min-width: 10%;
 }
 
 // Behavior
